# Ultralight-NativeWebBrowser

./: .gitignore  BRIDGE_TIMING_FIX.md  CHANGELOG_v1.5.md  CMakeLists.txt  README.md  SETTINGS_FIX_DETAILED.md  SETTINGS_FLOW_ANALYSIS.md  SETTINGS_REWRITE_SUMMARY.md  browser.rc  build.bat  compilation_complete.ps1  compilation_fastbuild.ps1  compilation_justcompile.ps1  compilation_run.ps1  compile.ps1  compile_and_run.bat  compile_and_run.ps1  run.bat  run.ps1  test-settings-comprehensive.ps1  test-settings.ps1
.github/scripts/: braces_count.ps1  check_braces.ps1  find_installer.ps1  find_unbalanced_brace.ps1  parse_nsis_log.ps1
.github/workflows/: build-all-arm.yml  build-all-x64.yml  build-all.yml  build-linux-arm64.yml  build-linux-sdks.yml  build-linux.yml  build-macos-arm64.yml  build-macos-sdks.yml  build-macos.yml  build-windows.yml
assets/: blocklist.txt  chrome-tabs.css  chrome-tabs.js  contextmenu.html  downloads-panel.html  downloads.html  history.html  icon.icns  menu.html  new_tab_page.html  popular_sites.json  quick-inspector.html  settings-panel.html  settings.html  settings_catalog.json  shortcuts.json  suggestions.html  ui.css  ui.html  ui.js
assets/filters/: adservers.txt  trackers.txt  urlpatterns.txt
assets/google-static_files/: RotateCookiesPage.html  m=aLUfP  m=lOO0Vd,sy8q,P6sQOc  m=pjDTFb  rs=AA2YrTs_Yp9Iul0g6ZLQA9tCbcgF5Wo80g
assets/static-sties/: google-static.html
assets/static-sties/google-static_files/: m=cdos,hsm,jsa,mb4ZUb,cEt90b,SNUn3,qddgKe,sTsDMc,dtl0hd,eHDfl,YV5bee,d,csi  m=cdos,hsm,jsa,mb4ZUb,cEt90b,SNUn3,qddgKe,sTsDMc,dtl0hd,eHDfl,YV5bee,d,csi(1)  m=sy16a,sy1b6,sy14v,sy1b1,sy1b0,sy1ay,syni,sy1az,sy1b8,sy1an,sy1au,sy1am,sy1ar,sy1ao,sy177,sy1av,sy1ai,sy16d,sy16e,epYOx  saved_resource.html
cmake/packaging/: ultralight-webbrowser.desktop.in  ultralight-webbrowser.sh
cmake/tests/: verify_assets.cmake  verify_sdk.cmake
data/: settings.json
scripts/: install_curl.ps1  install_curl.sh
setup/: settings.json
src/: AdBlocker.cpp  AdBlocker.h  Browser.cpp  Browser.h  DownloadManager.cpp  DownloadManager.h  Env.h  Tab.cpp  Tab.h  UI.cpp  UI.h  main.cpp  resource.h
